--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,12 @@
 	--logo-part: #2196f3;
 }
 
+*,
+*:before,
+*:after {
+	box-sizing: border-box;
+}
+
 body {
 	font-family: "Roboto", sans-serif;
 	font-weight: 400px;
@@ -15,8 +21,43 @@ body {
 	background-color: #ffffff;
 }
 
+.visually-hidden {
+	position: absolute !important;
+	clip: rect(1px 1px 1px 1px);
+	/* IE6, IE7 */
+	clip: rect(1px, 1px, 1px, 1px);
+	padding: 0 !important;
+	border: 0 !important;
+	height: 1px !important;
+	width: 1px !important;
+	overflow: hidden;
+}
+
+img {
+	display: block;
+}
+div > img {
+	display: inline-block;
+}
+
+.list {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.container {
+	width: 1200px;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
 /* Заголовки */
 .main-tittle {
+	margin: 0 0 50px;
+
 	color: var(--main-color);
 	font-weight: 700;
 	font-size: 36px;
@@ -29,6 +70,21 @@ body {
 	display: inline-block;
 }
 /* Шапка сайта */
+
+.page-header {
+	padding: 25px 0px;
+}
+
+.navigation {
+	display: flex;
+	align-items: center;
+	margin-right: auto;
+}
+
+.navigation > .logo {
+	margin-right: 85px;
+}
+
 .logo a {
 	font-family: "Raleway", sans-serif;
 	font-weight: 700px;
@@ -43,7 +99,12 @@ a > span {
 }
 
 .menu-list {
+	display: flex;
 	list-style-type: none;
+}
+
+.menu-item:not(:last-child) {
+	margin-right: 50px;
 }
 
 .menu-link {
@@ -55,7 +116,19 @@ a > span {
 	color: var(--main-color);
 }
 
-.contacts {
+.menu-item .menu-link.current {
+	color: var(--logo-part);
+}
+
+.flexbox {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.contacts-mail {
+	margin-right: 30px;
+
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.142;
@@ -64,46 +137,75 @@ a > span {
 	text-decoration: none;
 }
 
-.contacts:hover,
-.contacts:focus,
+.contacts-tel {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.142;
+	letter-spacing: 0.02em;
+	color: var(--text-coor);
+	text-decoration: none;
+}
+.contacts-mail:hover,
+.contacts-mail:focus,
+.contacts-tel:hover,
+.contacts-tel:focus,
 .menu-link:hover,
 .menu-link:focus {
 	color: var(--logo-part);
 }
 /* Герой секция */
 .hero {
+	display: block;
+	padding-top: 200px;
+	padding-bottom: 200px;
 	background-color: rgba(47, 48, 58, 0.8);
+	text-align: center;
 }
 
 .hero-tittle {
+	margin: 0 0 30px;
 	color: var(--white-color);
 	font-weight: 900;
 	font-size: 44px;
 	line-height: 1.363;
-	text-align: center;
 	letter-spacing: 0.06em;
 	text-transform: uppercase;
 }
 
 .btn {
+	padding: 10px 32px;
+
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.875;
-	display: flex;
-	align-items: center;
-	text-align: center;
+	display: inline-block;
 	letter-spacing: 0.06em;
 	color: var(--white-color);
 	background-color: var(--logo-part);
 	cursor: pointer;
+	border-radius: 4px;
+	border-color: var(--logo-part);
 }
 
 /* Наши преимущества */
 .advantage-list {
+	padding-top: 94px;
+	padding-bottom: 94px;
+	display: flex;
 	list-style-type: none;
 }
 
+.advantage-item {
+	width: 270px;
+}
+
+.advantage-item:not(:last-child) {
+	margin-right: 30px;
+}
+
 .advantage-tittle {
+	margin-top: 30px;
+	margin-bottom: 0;
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 1.143;
@@ -111,16 +213,26 @@ a > span {
 }
 
 .advantage-text {
+	margin-top: 10px;
+	margin-bottom: 0;
 	font-size: 14px;
 	line-height: 1.714;
 	color: var(--text-color);
 }
 /* Чем мы занимаемся */
 .doing-list {
+	padding-bottom: 94px;
+	margin: 0;
+	display: flex;
 	list-style-type: none;
+}
+.doing-block:not(:last-child) {
+	width: calc((100% - 30px * 2) / 3);
+	margin-right: 30px;
 }
 
 .doing-tittle {
+	margin: 0;
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 1.143;
@@ -131,14 +243,34 @@ a > span {
 }
 /* Наша команда */
 .command {
+	padding-top: 95px;
+	padding-bottom: 94px;
 	background-color: #f5f4fa;
 }
 
 .command-list {
+	display: flex;
+	flex-wrap: wrap;
 	list-style-type: none;
 }
 
+.description {
+	padding: 0 32px 24px;
+	margin: 10px 0 16px;
+	text-align: center;
+}
+
+.command-block {
+	width: calc((100% - 90px) / 4);
+
+	background-color: var(--white-color);
+}
+.command-block:not(:last-child) {
+	margin-right: 30px;
+}
+
 .command-name {
+	margin: 30px 0 0;
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.188;
@@ -146,21 +278,55 @@ a > span {
 }
 
 .command-position {
+	margin: 10px 0 0;
 	font-size: 16px;
 	line-height: 1.188;
 	text-align: center;
 	color: var(--text-color);
 }
 
+.social {
+	padding: 0;
+	margin-top: 16px;
+}
+.social-link:not(:last-child) {
+	margin-right: 35px;
+}
+
 /* Наши клиенты */
+.clients {
+	padding-top: 94px;
+	padding-bottom: 94px;
+}
+
 .clients-list {
+	margin: 0;
+	padding: 0;
+}
+
+.clients-item {
 	list-style-type: none;
 	display: inline-block;
 }
+.clients-item:not(:last-child) {
+	width: calc((100% - 150px) / 6);
+	margin-right: 30px;
+}
 
 /* Подвал страницы */
+
+.logo-footer {
+	margin: 0 0 20px 0;
+}
+.footer-flex {
+	display: flex;
+	align-items: baseline;
+	justify-content: space-between;
+}
+
 .footer {
 	background-color: #2f303a;
+	padding: 60px 0;
 }
 
 .address {
@@ -168,17 +334,30 @@ a > span {
 	color: var(--white-color);
 }
 
-.footer-contacts {
-	color: rgba(255, 255, 255, 0.6);
-	text-decoration: none;
+.address-main {
+	margin: 0 0 9px 0;
 }
 
-.footer-contacts:hover,
-.footer-contacts:focus {
+.footer-mail {
+	margin: 0 0 9px 0;
+}
+
+.footer-mail,
+.footer-tel {
+	color: rgba(255, 255, 255, 0.6);
+	text-decoration: none;
+	display: block;
+}
+
+.footer-mail:hover,
+.footer-mail:focus,
+.footer-tel:hover,
+.footer-tel:focus {
 	color: var(--logo-part);
 }
 
 .footer-text {
+	margin: 0 0 20px 0;
 	font-weight: 700;
 	line-height: 1.143;
 	text-transform: uppercase;
@@ -186,13 +365,34 @@ a > span {
 }
 
 /* Страница портфолио */
+.section {
+	padding: 94px 0;
+}
+
 /* Кнопки фильтр */
+
+.filter-list {
+	display: flex;
+	justify-content: center;
+	padding: 0;
+	margin: 0 0 50px 0;
+	text-decoration: none;
+	list-style-type: none;
+}
+
+.filter-list .item:not(:last-child) {
+	margin-right: 8px;
+}
+
 .filter-btn {
+	padding: 6px 22px;
+	background-color: #f5f4fa;
+	color: var(--title-text-color);
 	font-weight: 500;
 	font-size: 16px;
-	line-height: 1.625;
+	line-height: 1.5;
 	text-align: center;
-	background-color: #f5f4fa;
+	border: none;
 }
 
 .filter-btn:hover,
@@ -205,7 +405,24 @@ a > span {
 /* Страница работ портфолио */
 
 .portfolio-list {
+	display: flex;
+	flex-wrap: wrap;
 	list-style-type: none;
+}
+
+.portfolio-list .item {
+	width: calc((100% - 60px) / 3);
+	margin-right: 30px;
+	margin-bottom: 30px;
+	border: 1px solid #eeeeee;
+}
+
+.portfolio-list .item:nth-child(3n) {
+	margin-right: 0;
+}
+
+.portfolio-list .item:nth-last-child(-n + 3) {
+	margin-bottom: 0;
 }
 
 .portfolio-item {
@@ -213,7 +430,13 @@ a > span {
 	color: var(--main-color);
 }
 
+.description {
+	padding: 0 24px 20px;
+}
+
 .portfolio-tittle {
+	margin: 20px 0 4px 0;
+	color: var(--main-color);
 	font-weight: 700;
 	font-size: 18px;
 	line-height: 2;
@@ -221,16 +444,19 @@ a > span {
 }
 
 .portfolio-text {
+	display: block;
+	margin: 0;
+	font-size: 16px;
+	line-height: 1.87;
 	font-size: 16px;
 	line-height: 1.875;
 	letter-spacing: 0.03em;
 	color: var(--text-color);
 }
 
-.portfolio-about {
-	font-size: 18px;
-	line-height: 1.556;
-	letter-spacing: 0.03em;
+.portfolio-description {
+	background-color: rgba(33, 150, 243, 0.9);
 	color: var(--white-color);
-	background-color: var(--logo-part);
+	font-size: 18px;
+	line-height: 1.55;
 }
